--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,10 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.5.1'
     annotationProcessor 'androidx.room:room-compiler:2.5.1'
 
+    // Coil dependecies
+    implementation("io.coil-kt:coil-compose:2.3.0")
+
+
     kapt 'androidx.room:room-compiler:2.5.1'
 
 }
